fixed horizontal scroll issue on mobile view

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  /* border: 1px solid red; */
+}
+
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -80,10 +84,10 @@ i:hover {
 
 main {
   background: rgba(112, 110, 255, 0.432);
+  overflow: hidden;
 }
 
 .project {
-  margin: 25px 50px;
   max-width: 450px;
 }
 
@@ -95,4 +99,10 @@ main {
   height: 200px;
   width: 290px;
   transition: 0.3s;
+}
+
+@media (min-width: 500px) {
+  .project {
+    margin: 25px 50px;
+  }
 }
